# game-of-life

./: CMakeLists.txt  Grid.cpp  Grid.h  World.cpp  World.h  main.cpp
